--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel": "^5.8.21",
     "body-parser": "^1.13.3",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "lodash": "^4.10.0",
     "morgan": "^1.7.0",
